# midudev_nextjs_for_begginners

./: .gitignore  README.md
news-app/: README.md  next.config.js  package-lock.json
news-app/pages/: _app.js  about.js  index.js
news-app/pages/components/: PageLayout.jsx
scripts/download_comics/: .gitignore  Cargo.toml
scripts/download_comics/src/: main.rs
xkcd-app/: .gitignore  README.md  next.config.js  package-lock.json
xkcd-app/components/: Footer.js  Header.js  Layout.js
xkcd-app/context/: i18n.js
xkcd-app/pages/: _app.js  index.js
xkcd-app/pages/api/: search.js
xkcd-app/pages/comic/: [id].js
xkcd-app/pages/search/: index.js
xkcd-app/translations/: en.json  es.json
